[tool.poetry]
name = "apc-anonymizer"
version = "0.1.0"
description = ""
authors = ["haphut <haphut@mistmap.com>"]
readme = "README.md"
packages = [{include = "apc_anonymizer", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
jsonschema = "^4.17.3"
pyyaml = "^6.0"
numpy = "^1.24.2"
pandas = "^1.5.3"
optuna = "^3.1.1"
numpyro = "^0.11.0"
psycopg2 = "^2.9.6"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.257"
black = "^23.1.0"
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79
select = ["E", "F", "I", "B", "Q"]

[tool.black]
line-length = 79
