[tool.poetry]
name = "apc-anonymizer"
version = "0.1.0"
description = "Anonymize automatic passenger counting (APC) results for public transit using differential privacy"
authors = ["haphut <haphut@mistmap.com>"]
readme = "README.md"
packages = [{include = "apc_anonymizer", from = "src"}]

[tool.poetry.dependencies]
jsonschema = "^4.17.3"
numpy = "^1.24.2"
numpyro = "^0.11.0"
optuna = "^3.1.1"
pandas = "^1.5.3"
psycopg2 = "^2.9.6"
python = "^3.10"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pytest = "^7.2.2"
pytest-mock = "^3.11.1"
ruff = "^0.0.257"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79
select = ["E", "F", "I", "B", "Q"]

[tool.black]
line-length = 79

[tool.poe.tasks]
black = ["black-preview", "black-normal"]
black-check = "black --check src tests"
black-normal = "black src tests"
black-preview = "black --preview src tests"
check = ["black-check", "ruff-check","test"]
ruff = "ruff --fix src tests"
ruff-check = "ruff src tests"
start = "python src/apc_anonymizer/main.py"
test = "pytest tests"
